--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,7 +6,7 @@
 
     <div class="form-group">
       <%= f.label :name %>
-      <%= f.email_field :name, autofocus: true, class: "form-control", required: true %>
+      <%= f.text_field :name, autofocus: true, class: "form-control", required: true %>
     </div>
 
     <div class="form-group">
